--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,12 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.0",
     "googleapis": "^170.1.0",
     "helmet": "^8.1.0",
     "joi": "^18.0.2",
