--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.11.0",
     "react-toastify": "^11.0.5",
-    "swiper": "^12.0.3",
+    "swiper": "^12.1.2",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -39,8 +39,8 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
+    "sharp": "^0.32.0",
     "tailwindcss": "^4.1.18",
-    "vite": "^7.2.4",
-    "sharp": "^0.32.0"
+    "vite": "^7.2.4"
   }
 }
