--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -26,6 +26,10 @@
         {
           "key": "Referrer-Policy",
           "value": "strict-origin-when-cross-origin"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://challenges.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' blob: data:; connect-src 'self' https://challenges.cloudflare.com https://shiv-ganga-3.onrender.com; frame-src 'self' blob: https://challenges.cloudflare.com; child-src 'self' blob: https://challenges.cloudflare.com; worker-src blob:; form-action 'self'; base-uri 'self'"
         }
       ]
     }
